--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="landing.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
                     <div class="grid-container">
                         <img src="/img/presidis.png" alt="Trulli" />
                         <button @click="cambiarDiv('tenda')">CATALEG</button>
-                        <h1>OFERTES DIARIES!!!</h1>
+                        <h1 class="portada">OFERTES DIARIES!!!</h1>
                       </div>
                     <button @click="cambiarDiv('tienda')"> {{ message }}</button>
                 </div>
