--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                 <div v-if="mostrar('compra')">
                     <div class="compra">
-                        
+                        <img src="/img/presidis.png" alt="Trulli" />
                     </div>
                 </div>
 
