--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                 <div v-if="mostrar('compra')">
                     <div class="compra">
-                        <img src="/img/presidis.png" alt="Trulli" />
+                        <img src="/img/presidis.png" @click="cambiarDiv('portada')">
                     </div>
                 </div>
 
