arreglar error button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div v-if="mostrar('portada')">
                     <div class="grid-container">
                         <img src="/img/presidis.png" alt="Trulli" />
-                        <button @click="cambiarDiv('tenda')">CATALEG</button>
+                        <button @click="cambiarDiv('tienda')">CATALEG</button>
                         <h1 class="portada">OFERTES DIARIES!!!</h1>
                       </div>
                 </div>
