--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
                 <div v-if="mostrar('compra')">
                     <div class="compra">
-                        <img src="/img/presidis.png" @click="cambiarDiv('portada')">
+                        <img class="logo" src="/img/presidis.png" @click="cambiarDiv('portada')">
+                        
                     </div>
                 </div>
 
