--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div id="app">
                 <div v-if="mostrar('portada')">
                     <div class="grid-container">
-                        <img src="/img/presidis.png" alt="Trulli" />
+                        <img class="logo" src="/img/presidis.png" alt="Trulli" />
                         <button @click="cambiarDiv('tienda')">CATALEG</button>
                         <h1 class="portada">OFERTES DIARIES!!!</h1>
                       </div>
