--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
                 <div v-if="mostrar('compra')">
                     <div class="compra">
-                        <img class="logo" src="/img/presidis.png" @click="cambiarDiv('portada')">
-                        
+                        <img src="/img/presidis.png" @click="cambiarDiv('portada')">
+                        <img class="img-producte" src="" width="200" height="200">
                     </div>
                 </div>
 
