inici pantalla de compra

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
                 <div v-if="mostrar('compra')">
                     <div class="compra">
                         <img class="logo" src="/img/presidis.png" @click="cambiarDiv('portada')">
-                        
+                        <img class="img-producte" src="" height="200" width="200">
+                        <span class="d-publicacio">2023</span>
+                        <h2 class="titol">Obras Maestras || El Cigala</h2>
                     </div>
                 </div>
 
