--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                                 <img class="img-productes" src="" width="200" height="200">
                                 <span class="d-producte">2023</span>
                                 <h2 class="titol">Obras Maestras || El Cigala</h2>
+                                <img src="/img/cart.jpg"  >
                             </div>
                         </div>
                     </div>
