--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h1 class="portada">OFERTES DIARIES!!!</h1>
   
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                <div class="carousel-container">
+                <div class="carousel-container"> 
                   <img class="carousel-image" src="https://www.lacasadeldisco.es/34744-large_default/diego-el-cigala-vinilo-obras-maestras-vinilo-dorado.jpg" alt="Image 1" />
                   <img class="carousel-image" src="https://www.lacasadeldisco.es/664-large_default/camaron-de-la-isla-cd-el-legado-de-camaron.jpg" alt="Image 2" style="display: none;" />
                   <img class="carousel-image" src="https://www.lacasadeldisco.es/34094-large_default/post-malone-cd-austin.jpg" alt="Image 3" style="display: none;" />
@@ -53,6 +53,14 @@
           </div>
         </div>
       </div>
+      <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <img class="maps" src="/img/map-pin.png" alt="maps">                                                                                     
+                <p>Presidis</p>           
+            </div>
+        </div>
+    </footer>
     </section>
     <script>
         let slideIndex = 1;
