--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     <hr>
 
                     <img src="" height="200" width="200">
+                    <p>Obras Maestras || El Cigala</p>
                     <li v-for="(disc, index) in filteredProducts" :key="index">
                         <div class="titul-artista" @click="cambiarDiv('compra')">
                             {{ disc.nombre}} || {{ disc.artista }}
