--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
 
                     <hr>
 
-                    <div class="content">
+                    <div class="producte">
                         <img src="" height="200" width="200">
                         <p class="t-titol">Obras Maestras || El Cigala</p>
+                        <p class="t-data">2023</p>
                     </div>
 
 
