--- a/index.html
+++ b/index.html
@@ -63,8 +63,26 @@
       <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <img class="maps" src="/img/map-pin.png" alt="maps">                                                                                     
-                <p>Presidis</p>           
+                <div class="footer-item">
+                    <img class="icon" src="/img/maps.jpg" alt="maps">
+                    <span>Carrer Alcala Nº342, 02602 - Madrid</span>
+                </div>
+                <div class="footer-item">
+                    <img class="icon" src="/img/calendar.png" alt="calendari">
+                    <span>Horari 10:00 - 21:00</span>
+                </div>
+                <div class="footer-item">
+                    <img class="icon" src="/img/mail.png" alt="gmail">
+                    <span>predis@gmail.com</span>
+                </div>
+                <div class="footer-item">
+                    <img class="icon" src="/img/wats.png" alt="whatsapp">
+                    <span>644 574 925</span>
+                </div>
+                <div class="footer-item">
+                    <img class="icon" src="/img/movil.png" alt="telefon">
+                    <span>91 487 00 23</span>
+                </div>
             </div>
         </div>
     </footer>
