--- a/indexPRUEBAS.html
+++ b/indexPRUEBAS.html
@@ -10,10 +10,40 @@
 </head>
 
 <body>
+    <!--
     <div id="app">
         <div v-for="(actual, index) in productes">
-            <img :src="'http://localhost:5501/laravel/public/' + actual.image" alt="">
+            <img :src="'http://localhost:5501/laravel/public/' + actual.image" alt="" width="200" height="200">
             <br><br>
+        </div>
+-->
+
+        <div v-if="mostrar('compra')">
+            <div class="compra">
+                <div v-if="mostrar('compra')">
+                    <img class="logo" src="/img/presidis.png" @click="cambiarDiv('portada')">
+                    <div class="compra">
+                        <img :src="'http://localhost:5501/laravel/public/' + actual.image" alt="" width="200" height="200">
+                        <span class="d-producte">{{ actual.año }}</span>
+                        <h2 class="titol">{{ actual.name }} || {{ actual.artista }}</h2>
+                        <div class="compra-cantitat">
+                            <img class="img-carrito" src="/img/cart.jpg">
+                            <input type="button" value="-">
+                            <input type="text" id="cantitat" name="id1" value="0">
+                            <input type="button" value="+">
+                        </div>
+
+                        <p class="desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus
+                            accusamus velit exercitationem omnis veritatis aliquam, quidem soluta autem, in
+                            repudiandae ipsam sint fuga numquam modi debitis! Dolore iure tempora sapiente.</p>
+                        <div class="compra-footer">
+                            <img src="" width="50" height="50">
+                            <img src="" width="50" height="50">
+                            <img src="" width="50" height="50">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="project.js" type="module"></script>
