--- a/indexPRUEBAS.html
+++ b/indexPRUEBAS.html
@@ -18,7 +18,7 @@
       <div class="search-container">
         <input type="text" class="search-input" placeholder="Search...">
         <img class="search-icon" src="img/search.png" alt="Search">
-    </div>
+      </div>
       <!-- <div class="header__buscador">
         <input type="text" placeholder="seach..">
         <img class="header__buscador-icon" src="img/search.png" alt="">
@@ -39,41 +39,69 @@
             <button @click="agregarAlCarro(index)"><img class="product__addtocart-icon" src="img/cart.jpg"
                 alt="" /></button>
             <div class="product__addtocart-button">
-              <button class="product__addtocart-button__sumar">+</button>
-              <input class="product__adtocart-input__number" type="number" disabled value="1">
-              <button class="product__addtocart-button__restar">-</button>
+              <button @click="substractCountMovie(index)" class="product__addtocart-button__sumar">-</button>
+              <input class="product__adtocart-input__number" type="text" disabled :value="actual.count">
+              <button @click="addCountMovie(index)" class="product__addtocart-button__restar">+</button>
             </div>
           </div>
         </div>
       </div>
       <div class="products-separador">
-        <hr />
+        <hr>
       </div>
     </div>
     <div v-if="mostrar('carro')">
       <h1>Carrito</h1>
+      <div v-for="(actual, index) in productesAddToCart" class="products">
+        <div class="products__products">
+          <img class="product__image" :src="'./laravel/public/' + actual.image" />
+          <div class="product__info">
+            <h3 class="product__name">{{actual.name}} || {{actual.artist}}</h3>
+            <h3 class="product__year">{{ actual.year}}</h3>
+            <h3 class="product__price">
+              <img class="product__price-icon" src="img/dollar-icon-price.png" alt="Price Icon" />
+              {{ actual.price }}
+            </h3>
+            <h3>x{{actual.count}}</h3>
+          </div>
+        </div>
+        <div class="products-separador">
+          <hr>
+        </div>
+      </div>
+
     </div>
     <div class="container-footer">
       <footer>
         <div class="button-container">
           <button class="button" @click="cambiarDiv('tienda')">
-            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 1024 1024" stroke-width="0" fill="currentColor" stroke="currentColor" class="icon">
-              <path d="M946.5 505L560.1 118.8l-25.9-25.9a31.5 31.5 0 0 0-44.4 0L77.5 505a63.9 63.9 0 0 0-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0 0 18.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204zm217.9-325.7V868H632V640c0-22.1-17.9-40-40-40H432c-22.1 0-40 17.9-40 40v228H238.1V542.3h-96l370-369.7 23.1 23.1L882 542.3h-96.1z"></path>
+            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 1024 1024" stroke-width="0"
+              fill="currentColor" stroke="currentColor" class="icon">
+              <path
+                d="M946.5 505L560.1 118.8l-25.9-25.9a31.5 31.5 0 0 0-44.4 0L77.5 505a63.9 63.9 0 0 0-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0 0 18.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204zm217.9-325.7V868H632V640c0-22.1-17.9-40-40-40H432c-22.1 0-40 17.9-40 40v228H238.1V542.3h-96l370-369.7 23.1 23.1L882 542.3h-96.1z">
+              </path>
             </svg>
           </button>
           <button class="button">
-            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" aria-hidden="true" viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor" class="icon">
-              <path d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" stroke-linejoin="round" stroke-linecap="round"></path>
+            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" aria-hidden="true" viewBox="0 0 24 24"
+              stroke-width="2" fill="none" stroke="currentColor" class="icon">
+              <path d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" stroke-linejoin="round" stroke-linecap="round">
+              </path>
             </svg>
           </button>
           <button class="button">
-            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="0" fill="currentColor" stroke="currentColor" class="icon">
-              <path d="M12 2.5a5.5 5.5 0 0 1 3.096 10.047 9.005 9.005 0 0 1 5.9 8.181.75.75 0 1 1-1.499.044 7.5 7.5 0 0 0-14.993 0 .75.75 0 0 1-1.5-.045 9.005 9.005 0 0 1 5.9-8.18A5.5 5.5 0 0 1 12 2.5ZM8 8a4 4 0 1 0 8 0 4 4 0 0 0-8 0Z"></path>
+            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" stroke-width="0"
+              fill="currentColor" stroke="currentColor" class="icon">
+              <path
+                d="M12 2.5a5.5 5.5 0 0 1 3.096 10.047 9.005 9.005 0 0 1 5.9 8.181.75.75 0 1 1-1.499.044 7.5 7.5 0 0 0-14.993 0 .75.75 0 0 1-1.5-.045 9.005 9.005 0 0 1 5.9-8.18A5.5 5.5 0 0 1 12 2.5ZM8 8a4 4 0 1 0 8 0 4 4 0 0 0-8 0Z">
+              </path>
             </svg>
           </button>
-    
+
           <button class="button" @click="cambiarDiv('carro')">
-            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" stroke-linejoin="round" stroke-linecap="round" viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor" class="icon">
+            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" stroke-linejoin="round"
+              stroke-linecap="round" viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor"
+              class="icon">
               <circle r="1" cy="21" cx="9"></circle>
               <circle r="1" cy="21" cx="20"></circle>
               <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path>
