--- a/indexPRUEBAS.html
+++ b/indexPRUEBAS.html
@@ -7,7 +7,7 @@
   <title>Document</title>
   <link href=" https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css " rel="stylesheet">
   <!-- <link rel="stylesheet" href="newCSS.css" /> -->
-  <link rel="stylesheet" href="styleIndexTienda.css" />
+  <link rel="stylesheet" href="newCSS.css" />
   <link rel="stylesheet" href="navFooter.css">
 </head>
 
@@ -27,9 +27,9 @@
       <div class="products-container">
         <div v-if="mostrar('tienda')" v-for="(actual, index) in productes" class="products">
           <img class="product__image" :src="'./laravel/public/' + actual.image" />
-          <!-- <h3 class="product__price">
+          <h3 class="product__price">
             {{ actual.price }}
-          </h3> -->
+          </h3> 
           <div class="product__info">
             <h3 class="product__name">{{actual.name}}</h3>
             <h3 class="product__year">{{actual.artist}} ({{ actual.year}})</h3>
