--- a/index.html
+++ b/index.html
@@ -18,15 +18,11 @@
           <div v-if="mostrar('portada')">
             <div class="grid-container">
 
-                <h1 class="portada">OFERTES DIARIES!!!</h1>
+                <div v-for>
+                    <img class="product_image" :src="''./laravel/public/'+actual.image">
+                </div>
   
-                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                <div class="carousel-container"> 
-                  <img class="carousel-image" src="https://www.lacasadeldisco.es/34744-large_default/diego-el-cigala-vinilo-obras-maestras-vinilo-dorado.jpg" alt="Image 1" />
-                  <img class="carousel-image" src="https://www.lacasadeldisco.es/664-large_default/camaron-de-la-isla-cd-el-legado-de-camaron.jpg" alt="Image 2" style="display: none;" />
-                  <img class="carousel-image" src="https://www.lacasadeldisco.es/34094-large_default/post-malone-cd-austin.jpg" alt="Image 3" style="display: none;" />
-                </div>              
-                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
               
                 <button @click="cambiarDiv('tienda')">CATALEG</button>
                 <br>
@@ -65,72 +61,8 @@
           </div>
         </div>
       </div>
-      <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-item">
-                    <img class="icon" src="/img/maps.png" alt="maps">
-                    <span>Carrer Alcala Nº342, 02602 - Madrid</span>
-                </div>
-                <div class="footer-item">
-                    <img class="icon" src="/img/calendar.png" alt="calendari">
-                    <span>Horari 10:00 - 21:00</span>
-                </div>
-                <div class="footer-item">
-                    <img class="icon" src="/img/mail.png" alt="gmail">
-                    <span>predis@gmail.com</span>
-                </div>
-                <div class="footer-item">
-                    <img class="icon" src="/img/wats.png" alt="whatsapp">
-                    <span>644 574 925</span>
-                </div>
-                <div class="footer-item">
-                    <img class="icon" src="/img/movil.png" alt="telefon">
-                    <span>91 487 00 23</span>
-                </div>
-            </div>
-        </div>
-    </footer>
+
     </section>
-    <script>
-        let slideIndex = 1;
-        function autoSlides() {
-            plusSlides(1);
-        }
-        let slideInterval = setInterval(autoSlides, 5000);
-
-        function resetInterval() {
-            clearInterval(slideInterval);
-            slideInterval = setInterval(autoSlides, 5000);
-        }
-        function plusSlides(n) {
-            showSlides((slideIndex += n));
-        }
-
-        function currentSlide(n) {
-            showSlides((slideIndex = n));
-        }
-
-        function showSlides(n) {
-            let i;
-            const slides = document.querySelectorAll(".carousel-image");
-
-            if (n > slides.length) {
-                slideIndex = 1;
-            }
-            if (n < 1) {
-                slideIndex = slides.length;
-            }
-
-            for (i = 0; i < slides.length; i++) {
-                slides[i].style.display = "none";
-            }
-
-            slides[slideIndex - 1].style.display = "block";
-
-            resetInterval();
-        }
-    </script>
     <script src="project.js" type="module"></script>
 </body>
 
