--- a/indexPRUEBAS.html
+++ b/indexPRUEBAS.html
@@ -9,11 +9,12 @@
   <!-- <link rel="stylesheet" href="newCSS.css" /> -->
   <link rel="stylesheet" href="styleIndexTienda.css" />
   <link rel="stylesheet" href="navFooter.css">
+  <link rel="stylesheet" href="compra.css">
 </head>
 
 <body>
   <div id="app">
-    <div class="header">
+    <div class="header" v-if="!mostrar('checkout') && !mostrar('carro')">
       <div class="header__logo">
         <img src="img/logoPressidis.PNG" alt="">
       </div>
@@ -22,14 +23,19 @@
         <img class="search-icon" src="img/search.png" alt="Search">
       </div>
     </div>
+    <div v-else>
+      <header>
+
+      </header>
+    </div>
     <div>
 
       <div class="products-container">
         <div v-if="mostrar('tienda')" v-for="(actual, index) in productes" class="products">
           <img class="product__image" :src="'./laravel/public/' + actual.image" />
-          <!-- <h3 class="product__price">
+          <h3 class="product__price">
             {{ actual.price }}
-          </h3> -->
+          </h3>
           <div class="product__info">
             <h3 class="product__name">{{actual.name}}</h3>
             <h3 class="product__year">{{actual.artist}} ({{ actual.year}})</h3>
@@ -46,30 +52,39 @@
         </div>
       </div>
       <div v-if="mostrar('carro')">
-        <h1>Carrito</h1>
-        <div v-for="(actual, index) in productesAddToCart" class="products">
-          <div class="products__products">
-            <img class="product__image" :src="'./laravel/public/' + actual.image" />
-            <div class="product__info">
-              <h3 class="product__name">{{actual.name}} || {{actual.artist}}</h3>
-              <h4 class="product__year">{{ actual.year}}</h4>
-              <h3 class="product__price">
-                <img class="product__price-icon" src="img/dollar-icon-price.png" alt="Price Icon" />
-                {{ actual.price }}
-              </h3>
-              <h3>x{{actual.count}}</h3>
+        <div class="container">
+          <div class="carrito">
+            <h1>Carrito de Compras</h1>
+            <div v-for="(actual, index) in productesAddToCart" class="products">
+              <img class="product__image" :src="'./laravel/public/' + actual.image" />
+              <div class="product__info">
+                <h3 class="product__name">{{actual.name}}</h3>
+                <h4 class="product__artist">{{actual.artist}}</h4>
+                <h4 class="product__year">{{actual.year}}</h4>
+                <h3 class="product__price">
+                  <img class="product__price-icon" src="img/dollar-icon-price.png" alt="Price Icon" />
+                  {{actual.price}}
+                </h3>
+                <h3 class="product__count">x{{actual.count}}</h3>
+              </div>
             </div>
-          </div>
-          <div class="products-separador">
-            <hr>
+            <div class="products-separador"></div>
+            <button @click="cambiarDiv('checkout')" class="checkout-button">Checkout</button>
           </div>
         </div>
-
+      </div>
+      <div v-if="mostrar('checkout')">
+        <ol>
+          <li v-for="(actual, index) in productesAddToCart">
+            {{ actual.name}} - {{actual.count}} - {{actual.price * actual.count}} €
+          </li>
+        </ol>
+        <span><strong>Total: </strong> {{ calcularPriceTotal() }} €</span>
       </div>
       <div class="container-footer">
         <footer>
           <div class="button-container">
-            <button class="button" @click="cambiarDiv('tienda')">
+            <button class="button">
               <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 1024 1024" stroke-width="0"
                 fill="currentColor" stroke="currentColor" class="icon">
                 <path
@@ -77,11 +92,16 @@
                 </path>
               </svg>
             </button>
-            <button class="button">
-              <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" aria-hidden="true" viewBox="0 0 24 24"
-                stroke-width="2" fill="none" stroke="currentColor" class="icon">
-                <path d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" stroke-linejoin="round" stroke-linecap="round">
+            <button class="button" @click="cambiarDiv('tienda')">
+              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-shopping-bag-check" width="24"
+                height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
+                stroke-linecap="round" stroke-linejoin="round">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                <path
+                  d="M11.5 21h-2.926a3 3 0 0 1 -2.965 -2.544l-1.255 -8.152a2 2 0 0 1 1.977 -2.304h11.339a2 2 0 0 1 1.977 2.304l-.5 3.248">
                 </path>
+                <path d="M9 11v-5a3 3 0 0 1 6 0v5"></path>
+                <path d="M15 19l2 2l4 -4"></path>
               </svg>
             </button>
             <button class="button">
