--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </footer>
       </div>
 
-      <script src="project.js" type="module"></script>
+      <script src="js/project.js" type="module"></script>
     </div>
 </body>
 
