--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <div class="container-footer">
         <footer>
           <div class="button-container">
-            <button class="button">
+            <button class="button" @click="cambiarDiv('portada')">
               <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 1024 1024" stroke-width="0"
                 fill="currentColor" stroke="currentColor" class="icon">
                 <path
